<resources>
    <string name="app_name">Nanit Happy Birthday</string>

    <string name="details_field_name">Name</string>
    <string name="details_field_birthday">Birthday</string>
    <string name="details_field_birthday_format">MMM d, yyyy</string>
    <string name="details_field_error_msg">Mandatory field</string>
    <string name="details_field_photo">Photo</string>
    <string name="details_btn_next">Show birthday screen</string>
    <string name="details_date_picker_title">Baby\'s Birthday</string>
    <string name="details_select_from_gallery">Select a photo</string>

    <string name="dialog_photo_chooser_title">Select an option</string>
    <string name="dialog_photo_chooser_existing">Choose an existing photo</string>
    <string name="dialog_photo_chooser_new">Take a new photo</string>

    <string name="birthday_headline">Today %1$s is</string>
    <string name="birthday_share_btn_text">Share the news</string>

    <string name="intent_chooser_text">Please select</string>
</resources>
